# s3-ripper

./: Cargo.toml
src/: cloudwatch.rs  common.rs  main.rs
src/cloudwatch/: bucket_metrics.rs  bucket_sizer.rs  client.rs
src/common/: bucket.rs  bucket_sizer.rs  region.rs
