[package]
name = "s3-ripper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "0.49.0" }
aws-sdk-s3 = { version = "0.19.0"  }
aws-sdk-cloudwatch = { version = "0.19.0"  }
tokio = { version = "1.20.1", features = ["full"] }
structopt = { version = "0.3", default-features = false }
tokio-stream = "0.1.10"
anyhow = "1.0.65"
chrono = "0.4"
aws-smithy-types-convert = { version = "0.49.0", features = ["convert-chrono"] }
aws-types = "0.49.0"
async-trait = "0.1.57"
humansize = "2.1.0"


